<resources>
    <string name="app_name">BitFit-Application</string>
    <string name="submit">Submit</string>
    <string name="enter_the_calorie_amount">Enter the calorie amount</string>
    <string name="enter_the_activity">Enter the activity..</string>
    <string name="activity_name">Activity Name</string>
    <string name="calories_burned">Calories burned</string>
    <string name="record_this_food">Record This Food</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exercises">Exercises</string>
    <string name="statistics">Statistics</string>
    <string name="average_calories">Average Calories</string>
    <string name="minimum_calories">Minimum Calories</string>
    <string name="maximum_calories">Maximum Calories</string>
    <string name="plus">+</string>
    <string name="activity">Activity</string>
    <string name="food">Food:</string>
    <string name="calories">Calories:</string>
    <string name="record_new_food">Record New Food</string>
    <string name="food_name">Food Name</string>
    <string name="food_calories">Food Calories</string>
    <string name="_875">875</string>
    <string name="_2100">2100</string>
    <string name="_1500">1500</string>
</resources>